Fix tooltips, sequencer recipes, JEI per-strain display, and item subtype registration
- SequencerRecipe: added optional strain_id field for deterministic strain output
- SequencerRecipe.assemble() applies STRAIN_DATA + color when strain_id present
- Created 25 sequencer recipe JSONs for all preset strains with unique vanilla reagents
- LiquifierRecipeCategory: refactored to Display-based per-strain colored entries (25 total)
- JEI plugin: generate per-strain liquifier displays with colored extract input/output
- JEI plugin: register item subtypes for bud/weed/extract/seeds colored variant tracking
- Liquifier amount already fixed to 250mb per extract (from previous session)
- Joint/Blunt already using colored strain stacks (from previous session)
- Bucket tooltip already using Levels: format (from previous session)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>